# joujoudb

./: .gitignore  CRUSH.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
benches/: btree_contention.rs
src/: btree.rs  catalog.rs  config.rs  heappage.rs  lib.rs  main.rs  page.rs  schema.rs  serialize.rs  storage.rs  table.rs  tuple.rs  zerocopy.rs
src/cache/: lru.rs  memcache.rs  mod.rs  pagecache.rs
src/indexes/: btree.rs  mod.rs
src/pages/: btree.rs  heappage.rs  mod.rs  page.rs  superblock.rs
src/sql/: mod.rs  schema.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  peekable_ext.rs
src/sql/types/: mod.rs  value.rs
src/storage/: backend.rs  fs.rs  mod.rs
