[package]
name = "joujoudb"
version = "0.1.0"
edition = "2024"

[lib]
name = "joujoudb"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
libc = "0.2.174"
memmap2 = "0.9.7"
parking_lot = "0.12.4"
priority-queue = "2.5.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
zerocopy = { version = "0.8.26" }
zerocopy-derive = "0.8.26"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "btree_contention"
harness = false
