[package]
name = "joujoudb"
version = "0.1.0"
edition = "2024"

[lib]
name = "joujoudb"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.42"
libc = "0.2.177"
memmap2 = "0.9.9"
parking_lot = "0.12.5"
priority-queue = "2.7.0"
regex = "1.12.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
zerocopy = { version = "0.8.30" }
zerocopy-derive = "0.8.30"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "btree_contention"
harness = false
