[package]
name = "joujoudb"
version = "0.1.0"
edition = "2024"

[lib]
name = "joujoudb"
path = "src/lib.rs"

[[bin]]
name = "lexer"
path = "src/bin/lexer.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.44"
libc = "0.2.182"
memmap2 = "0.9.10"
miette = { version = "7.6.0", features = ["fancy"] }
parking_lot = "0.12.5"
priority-queue = "2.7.0"
regex = "1.12.3"
tempfile = "3.26.0"
thiserror = "2.0.18"
zerocopy = { version = "0.8.40" }
zerocopy-derive = "0.8.40"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "btree_contention"
harness = false
